--- a/style/index.css
+++ b/style/index.css
@@ -190,23 +190,12 @@ body {
 
 #brand .container-brand .brand-grid .brand-img:nth-of-type(3) {
     padding: 1rem 0px;
+    border-bottom: 0;
 }
 
 #brand .container-brand .brand-grid .brand-img:nth-of-type(4) {
     border-right: 0;
-}
-
-#brand .container-brand .brand-grid .brand-img:nth-of-type(6) {
-    border-right: 0;
-}
-
-#brand .container-brand .brand-grid .brand-img:nth-of-type(7) {
     border-bottom: 0;
-}
-
-#brand .container-brand .brand-grid .brand-img:nth-of-type(8) {
-    padding: 1rem 0px;
-    border: 0;
 }
 
 #brand .container-brand .brand-grid .brand-img img {
@@ -216,10 +205,6 @@ body {
 
 #brand .container-brand .brand-grid .brand-img:nth-of-type(3) img {
     width: 35%;
-}
-
-#brand .container-brand .brand-grid .brand-img:nth-of-type(8) img {
-    width: 50%;
 }
 
 #brand .container-brand p {
@@ -815,25 +800,7 @@ body {
     #brand .container-brand .brand-grid {
         grid-template-columns: repeat(4, 1fr);
     }
-
-    #brand .container-brand .brand-grid .brand-img:nth-of-type(1) {
-        border-bottom: 1px solid var(--color-border);
-    }
-
     #brand .container-brand .brand-grid .brand-img:nth-of-type(2) {
-        border-right: 1px solid var(--color-border);
-        border-bottom: 1px solid var(--color-border);
-    }
-
-    #brand .container-brand .brand-grid .brand-img:nth-of-type(3) {
-        border-bottom: 1px solid var(--color-border);
-    }
-
-    #brand .container-brand .brand-grid .brand-img:nth-of-type(4) {
-        border-bottom: 1px solid var(--color-border);
-    }
-
-    #brand .container-brand .brand-grid .brand-img:nth-of-type(6) {
         border-right: 1px solid var(--color-border);
     }
 
